Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-819

"lfs getstripe -M" broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0
    • Lustre 2.2.0
    • None
    • 1
    • 3
    • 4716

      I'm just testing sanity.sh test_56, and wanted to see whether "lfs getstripe -M" is working correctly. However, it doesn't do what I would expect:

      # lfs getstripe -v /mnt/lustre/d0.sanity/d56g/f56s.0
      /mnt/lustre/d0.sanity/d56g/f56s.0
      lmm_magic:          0x0BD10BD0
      lmm_seq:            0x200002b10
      lmm_object_id:      0x1b4
      lmm_stripe_count:   1
      lmm_stripe_size:    1048576
      lmm_stripe_pattern: 1
      lmm_stripe_offset:  1
              obdidx           objid          objid            group
                   1           10567         0x2947                0
      
      # lfs getstripe -M /mnt/lustre/d0.sanity/d56g/f56s.0
      /mnt/lustre/d0.sanity/d56g/f56s.0 MDT index: 53
      

      I definitely do not have 54 MDTs in my filesystem.

      Secondly, the output format is very difficult to parse. I would expect that the MDT index is printed as part of the "lfs getstripe -v" output, or possibly in addition to the normal "-v" output if "-v -M" is used?

      In contrast, "lfs getstripe -c" prints just the requested stripe count:

      # lfs getstripe -c /mnt/lustre/d0.sanity/d56g/f56s.0
      1
      

            di.wang Di Wang (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: