LU-819 Fix lfs getstripe -M

1. Fix lfs getstripe -M problem: some typo in llapi_file_fget_mdtidx.
2. Add lfs find -mdt and lfs mdts.
3. Add sanity test to check lfs getstripe -M and lfs find -mdt.

Change-Id: I3b327d33c49009149dbed23728416efecb67691c
Signed-off-by: wangdi <di.wang@whamcloud.com>