lustre/utils/liblustreapi.c
@@ -1174,6 +1174,16 @@ int llapi_file_fget_lov_uuid(int fd, struct obd_uuid *lov_name)
         return rc;
 }
 
+int llapi_file_fget_lmv_uuid(int fd, struct obd_uuid *lov_name)
+{
+        int rc = ioctl(fd, OBD_IOC_GETMDNAME, lov_name);
+        if (rc) {
+                rc = -errno;
+                llapi_error(LLAPI_MSG_ERROR, rc, "error: can't get lmv name.");
+        }
+        return rc;
+}
+
 int llapi_file_get_lov_uuid(const char *path, struct obd_uuid *lov_uuid)
 {
         int fd, rc;
@@ -1191,27 +1201,37 @@ int llapi_file_get_lov_uuid(const char *path, struct obd_uuid *lov_uuid)
         return rc;
 }
 
+enum lov_type {
+        LOV_TYPE = 0,
+        LMV_TYPE
+};
 /*
  * If uuidp is NULL, return the number of available obd uuids.
  * If uuidp is non-NULL, then it will return the uuids of the obds. If
  * there are more OSTs then allocated to uuidp, then an error is returned with
  * the ost_count set to number of available obd uuids.
  */
-int llapi_lov_get_uuids(int fd, struct obd_uuid *uuidp, int *ost_count)
+static int llapi_get_target_uuids(int fd, struct obd_uuid *uuidp, int *ost_count, int type)
 {
-        struct obd_uuid lov_name;
+        struct obd_uuid name;
         char buf[1024];
         FILE *fp;
         int rc = 0, index = 0;
 
         /* Get the lov name */
-        rc = llapi_file_fget_lov_uuid(fd, &lov_name);
-        if (rc)
-                return rc;
+        if (type == LOV_TYPE) {
+                rc = llapi_file_fget_lov_uuid(fd, &name);
+                if (rc)
+                        return rc;
+        } else {
+                rc = llapi_file_fget_lmv_uuid(fd, &name);
+                if (rc)
+                        return rc;
+        }
 
         /* Now get the ost uuids from /proc */
-        snprintf(buf, sizeof(buf), "/proc/fs/lustre/lov/%s/target_obd",
-                 lov_name.uuid);
+        snprintf(buf, sizeof(buf), "/proc/fs/lustre/%s/%s/target_obd",
+                 type == LOV_TYPE ? "lov":"lmv", name.uuid);
         fp = fopen(buf, "r");
         if (fp == NULL) {
                 rc = -errno;
@@ -1234,6 +1254,11 @@ int llapi_lov_get_uuids(int fd, struct obd_uuid *uuidp, int *ost_count)
 
         *ost_count = index;
         return 0;
+}
+
+int llapi_lov_get_uuids(int fd, struct obd_uuid *uuidp, int *ost_count)
+{
+        return llapi_get_target_uuids(fd, uuidp, ost_count, LOV_TYPE);
 }
 
 int llapi_get_obd_count(char *mnt, int *count, int is_mdt)
@@ -1284,7 +1309,7 @@ int llapi_uuid_match(char *real_uuid, char *search_uuid)
  * returned in param->obdindex */
 static int setup_obd_uuid(DIR *dir, char *dname, struct find_param *param)
 {
-        struct obd_uuid lov_uuid;
+        struct obd_uuid obd_uuid;
         char uuid[sizeof(struct obd_uuid)];
         char buf[1024];
         FILE *fp;
@@ -1294,7 +1319,10 @@ static int setup_obd_uuid(DIR *dir, char *dname, struct find_param *param)
                 return rc;
 
         /* Get the lov name */
-        rc = llapi_file_fget_lov_uuid(dirfd(dir), &lov_uuid);
+        if (param->get_lmv)
+                rc = llapi_file_fget_lmv_uuid(dirfd(dir), &obd_uuid);
+        else
+                rc = llapi_file_fget_lov_uuid(dirfd(dir), &obd_uuid);
         if (rc) {
                 if (rc != -ENOTTY) {
                         llapi_error(LLAPI_MSG_ERROR, rc,
@@ -1308,8 +1336,8 @@ static int setup_obd_uuid(DIR *dir, char *dname, struct find_param *param)
         param->got_uuids = 1;
 
         /* Now get the ost uuids from /proc */
-        snprintf(buf, sizeof(buf), "/proc/fs/lustre/lov/%s/target_obd",
-                 lov_uuid.uuid);
+        snprintf(buf, sizeof(buf), "/proc/fs/lustre/%s/%s/target_obd",
+                 param->get_lmv ? "lmv" : "lov", obd_uuid.uuid);
         fp = fopen(buf, "r");
         if (fp == NULL) {
                 rc = -errno;
@@ -1318,7 +1346,8 @@ static int setup_obd_uuid(DIR *dir, char *dname, struct find_param *param)
         }
 
         if (!param->obduuid && !param->quiet && !param->obds_printed)
-                llapi_printf(LLAPI_MSG_NORMAL, "OBDS:\n");
+                llapi_printf(LLAPI_MSG_NORMAL, "%s:\n",
+                             param->get_lmv ? "MDTS" : "OBDS:");
 
         while (fgets(buf, sizeof(buf), fp) != NULL) {
                 if (sscanf(buf, "%d: %s", &index, uuid) < 2)
@@ -1351,11 +1380,13 @@ static int setup_obd_uuid(DIR *dir, char *dname, struct find_param *param)
 /* In this case, param->obduuid will be an array of obduuids and
  * obd index for all these obduuids will be returned in
  * param->obdindexes */
-static int setup_obd_indexes(DIR *dir, struct find_param *param)
+static int setup_indexes(DIR *dir, struct obd_uuid *obduuids, int num_obds,
+                         int **obdindexes, int *obdindex, int type)
 {
         struct obd_uuid *uuids = NULL;
         int obdcount = INIT_ALLOC_NUM_OSTS;
         int ret, obd_valid = 0, obdnum, i;
+        int *indexes;
 
         uuids = (struct obd_uuid *)malloc(INIT_ALLOC_NUM_OSTS *
                                           sizeof(struct obd_uuid));
@@ -1363,8 +1394,7 @@ static int setup_obd_indexes(DIR *dir, struct find_param *param)
                 return -ENOMEM;
 
 retry_get_uuids:
-        ret = llapi_lov_get_uuids(dirfd(dir), uuids,
-                                  &obdcount);
+        ret = llapi_get_target_uuids(dirfd(dir), uuids, &obdcount, type);
         if (ret) {
                 struct obd_uuid *uuids_temp;
 
@@ -1378,39 +1408,63 @@ retry_get_uuids:
                 }
 
                 llapi_error(LLAPI_MSG_ERROR, ret, "get ost uuid failed");
-                return ret;
+                goto out_free;
         }
 
-        param->obdindexes = malloc(param->num_obds * sizeof(param->obdindex));
-        if (param->obdindexes == NULL)
-                return -ENOMEM;
+        indexes = malloc(num_obds * sizeof(*obdindex));
+        if (indexes == NULL) {
+                ret = -ENOMEM;
+                goto out_free;
+        }
 
-        for (obdnum = 0; obdnum < param->num_obds; obdnum++) {
+        for (obdnum = 0; obdnum < num_obds; obdnum++) {
                 for (i = 0; i < obdcount; i++) {
                         if (llapi_uuid_match(uuids[i].uuid,
-                                             param->obduuid[obdnum].uuid)) {
-                                param->obdindexes[obdnum] = i;
+                                             obduuids[obdnum].uuid)) {
+                                indexes[obdnum] = i;
                                 obd_valid++;
                                 break;
                         }
                 }
                 if (i >= obdcount) {
-                        param->obdindexes[obdnum] = OBD_NOT_FOUND;
+                        indexes[obdnum] = OBD_NOT_FOUND;
                         llapi_err_noerrno(LLAPI_MSG_ERROR,
                                           "error: %s: unknown obduuid: %s",
-                                          __func__,
-                                          param->obduuid[obdnum].uuid);
+                                          __func__, obduuids[obdnum].uuid);
                         ret = -EINVAL;
                 }
         }
 
         if (obd_valid == 0)
-                param->obdindex = OBD_NOT_FOUND;
+                *obdindex = OBD_NOT_FOUND;
         else
-                param->obdindex = obd_valid;
+                *obdindex = obd_valid;
 
+        *obdindexes = indexes;
+out_free:
+        if (uuids)
+                free(uuids);
+
+        return ret;
+}
+
+static int setup_target_indexes(DIR *dir, struct find_param *param)
+{
+        int ret = 0;
+
+        if (param->mdtuuid) {
+                ret = setup_indexes(dir, param->mdtuuid, param->num_mdts,
+                              &param->mdtindexes, &param->mdtindex, LMV_TYPE);
+                if (ret)
+                        return ret;
+        }
+        if (param->obduuid) {
+                ret = setup_indexes(dir, param->obduuid, param->num_obds,
+                              &param->obdindexes, &param->obdindex, LOV_TYPE);
+                if (ret)
+                        return ret;
+        }
         param->got_uuids = 1;
-
         return ret;
 }
 
@@ -1904,7 +1958,7 @@ static int find_time_check(lstat_t *st, struct find_param *param, int mds)
         /* Check if file is accepted. */
         if (param->atime) {
                 ret = find_value_cmp(st->st_atime, param->atime,
-                                     param->asign, param->exclude_atime, 
+                                     param->asign, param->exclude_atime,
                                      24 * 60 * 60, mds);
                 if (ret < 0)
                         return ret;
@@ -1913,7 +1967,7 @@ static int find_time_check(lstat_t *st, struct find_param *param, int mds)
 
         if (param->mtime) {
                 ret = find_value_cmp(st->st_mtime, param->mtime,
-                                     param->msign, param->exclude_mtime, 
+                                     param->msign, param->exclude_mtime,
                                      24 * 60 * 60, mds);
                 if (ret < 0)
                         return ret;
@@ -1938,6 +1992,74 @@ static int find_time_check(lstat_t *st, struct find_param *param, int mds)
         }
 
         return rc;
+}
+
+/**
+ * Check whether the stripes matches the indexes user provided
+ *       1   : matched
+ *       0   : Unmatched
+ */
+static int check_obd_match(struct find_param *param)
+{
+        lstat_t *st = &param->lmd->lmd_st;
+	struct lov_user_ost_data_v1 *lmm_objects;
+	int i, j;
+
+	if (param->obduuid && param->obdindex == OBD_NOT_FOUND)
+		return 0;
+
+	if (!S_ISREG(st->st_mode))
+		return 0;
+
+	/* Only those files should be accepted, which have a
+	 * stripe on the specified OST. */
+	if (!param->lmd->lmd_lmm.lmm_stripe_count)
+		return 0;
+
+	if (param->lmd->lmd_lmm.lmm_magic ==
+	    LOV_USER_MAGIC_V3) {
+		struct lov_user_md_v3 *lmmv3 =
+			(void *)&param->lmd->lmd_lmm;
+		lmm_objects = lmmv3->lmm_objects;
+	} else {
+		lmm_objects = param->lmd->lmd_lmm.lmm_objects;
+	}
+
+	for (i = 0;
+	     i < param->lmd->lmd_lmm.lmm_stripe_count; i++) {
+		for (j = 0; j < param->num_obds; j++) {
+			if (param->obdindexes[j] ==
+			    lmm_objects[i].l_ost_idx) {
+				if (param->exclude_obd)
+					return 0;
+				return 1;
+			}
+		}
+	}
+
+        if (param->exclude_obd)
+                return 1;
+        return 0;
+}
+
+static int check_mdt_match(struct find_param *param)
+{
+	int i;
+
+	if (param->mdtuuid && param->mdtindex == OBD_NOT_FOUND)
+		return 0;
+
+        /*FIXME: For striped dir, we should get stripe information and check*/
+        for (i = 0; i < param->num_mdts; i++) {
+                if (param->mdtindexes[i] == param->file_mdtindex)
+                        if (param->exclude_mdt)
+                                return 0;
+                        return 1;
+        }
+
+	if (param->exclude_mdt)
+		return 1;
+	return 0;
 }
 
 static int cb_find_init(char *path, DIR *parent, DIR *dir,
@@ -1977,10 +2099,9 @@ static int cb_find_init(char *path, DIR *parent, DIR *dir,
                 }
         }
 
-
         /* If a time or OST should be checked, the decision is not taken yet. */
         if (param->atime || param->ctime || param->mtime || param->obduuid ||
-            param->check_size)
+            param->mdtuuid || param->check_size)
                 decision = 0;
 
         ret = 0;
@@ -1990,6 +2111,9 @@ static int cb_find_init(char *path, DIR *parent, DIR *dir,
                         /* retrieve needed file info */
                         ret = ioctl(dirfd(dir), LL_IOC_MDC_GETINFO,
                                     (void *)param->lmd);
+                        if (ret == 0)
+                                ret = llapi_file_fget_mdtidx(dirfd(dir),
+                                                         &param->file_mdtindex);
                 } else {
                         char *fname = strrchr(path, '/');
                         fname = (fname == NULL ? path : fname + 1);
@@ -1998,6 +2122,34 @@ static int cb_find_init(char *path, DIR *parent, DIR *dir,
                         strncpy((char *)param->lmd, fname, param->lumlen);
                         ret = ioctl(dirfd(parent), IOC_MDC_GETFILEINFO,
                                    (void *)param->lmd);
+                        if (ret == 0) {
+                                int fd;
+                                lstat_t tmp_st;
+
+                                ret = lstat_f(path, &tmp_st);
+                                if (ret) {
+                                        ret = -errno;
+                                        llapi_error(LLAPI_MSG_ERROR, ret,
+                                                    "error: %s: lstat failed for %s",
+                                                    __func__, path);
+                                        return ret;
+                                }
+                               if (S_ISREG(tmp_st.st_mode)) {
+                                        fd = open(path, O_RDONLY);
+                                        if (fd > 0) {
+                                                ret = llapi_file_fget_mdtidx(fd,
+                                                                 &param->file_mdtindex);
+                                                close(fd);
+                                        } else {
+                                                ret = fd;
+                                        }
+                                } else {
+                                        /*For special inode, it assumes to reside on
+                                         *the same MDT with the parent*/
+                                        ret = llapi_file_fget_mdtidx(dirfd(parent),
+                                                                &param->file_mdtindex);
+                                }
+                        }
                 }
         }
 
@@ -2040,17 +2192,17 @@ static int cb_find_init(char *path, DIR *parent, DIR *dir,
         }
 
         /* Prepare odb. */
-        if (param->obduuid) {
+        if (param->obduuid || param->mdtuuid) {
                 if (lustre_fs && param->got_uuids &&
                     param->st_dev != st->st_dev) {
                         /* A lustre/lustre mount point is crossed. */
                         param->got_uuids = 0;
                         param->obds_printed = 0;
-                        param->obdindex = OBD_NOT_FOUND;
+                        param->obdindex = param->mdtindex = OBD_NOT_FOUND;
                 }
 
                 if (lustre_fs && !param->got_uuids) {
-                        ret = setup_obd_indexes(dir ? dir : parent, param);
+                        ret = setup_target_indexes(dir ? dir : parent, param);
                         if (ret)
                                 return ret;
 
@@ -2058,52 +2210,42 @@ static int cb_find_init(char *path, DIR *parent, DIR *dir,
                 } else if (!lustre_fs && param->got_uuids) {
                         /* A lustre/non-lustre mount point is crossed. */
                         param->got_uuids = 0;
-                        param->obdindex = OBD_NOT_FOUND;
+                        param->obdindex = param->mdtindex = OBD_NOT_FOUND;
                 }
         }
 
-        /* If an OBD UUID is specified but no one matches, skip this file. */
-        if (param->obduuid && param->obdindex == OBD_NOT_FOUND)
+       if ((param->obduuid && param->obdindex == OBD_NOT_FOUND) ||
+            (param->mdtuuid && param->mdtindex == OBD_NOT_FOUND))
                 goto decided;
 
         /* If a OST UUID is given, and some OST matches, check it here. */
-        if (param->obdindex != OBD_NOT_FOUND) {
-                if (!S_ISREG(st->st_mode))
-                        goto decided;
-
-                /* Only those files should be accepted, which have a
-                 * stripe on the specified OST. */
-                if (!param->lmd->lmd_lmm.lmm_stripe_count) {
-                        goto decided;
-                } else {
-                        int i, j;
-                        struct lov_user_ost_data_v1 *lmm_objects;
-
-                        if (param->lmd->lmd_lmm.lmm_magic ==
-                            LOV_USER_MAGIC_V3) {
-                                struct lov_user_md_v3 *lmmv3 =
-                                        (void *)&param->lmd->lmd_lmm;
-
-                                lmm_objects = lmmv3->lmm_objects;
-                        } else {
-                                lmm_objects = param->lmd->lmd_lmm.lmm_objects;
-                        }
-
-                        for (i = 0;
-                             i < param->lmd->lmd_lmm.lmm_stripe_count; i++) {
-                                for (j = 0; j < param->num_obds; j++) {
-                                        if (param->obdindexes[j] ==
-                                            lmm_objects[i].l_ost_idx) {
-                                                if (param->exclude_obd)
-                                                        goto decided;
+        if (param->obdindex != OBD_NOT_FOUND ||
+            param->mdtindex != OBD_NOT_FOUND) {
+                if (param->obduuid) {
+                        if (check_obd_match(param)) {
+                                if (param->mdtuuid) {
+                                        if(check_mdt_match(param))
                                                 goto obd_matches;
-                                        }
-                                }
-                        }
-
-                        if (i == param->lmd->lmd_lmm.lmm_stripe_count) {
-                                if (param->exclude_obd)
+                                        else
+                                                goto decided;
+                                } else {
                                         goto obd_matches;
+                                }
+                        } else {
+                                goto decided;
+                        }
+                }
+                if (param->mdtuuid) {
+                        if (check_mdt_match(param)) {
+                                if (param->obduuid) {
+                                        if(check_obd_match(param))
+                                                goto obd_matches;
+                                        else
+                                                goto decided;
+                                } else {
+                                        goto obd_matches;
+                                }
+                        } else {
                                 goto decided;
                         }
                 }
@@ -2250,7 +2392,7 @@ int llapi_find(char *path, struct find_param *param)
  */
 int llapi_file_fget_mdtidx(int fd, int *mdtidx)
 {
-        if (ioctl(fd, LL_IOC_GET_MDTIDX, &mdtidx) < 0)
+        if (ioctl(fd, LL_IOC_GET_MDTIDX, mdtidx) < 0)
                 return -errno;
         return 0;
 }
@@ -2301,7 +2443,7 @@ static int cb_get_mdt_index(char *path, DIR *parent, DIR *d, void *data,
                 return ret;
         }
 
-        if (param->quiet)
+        if (param->quiet || !(param->verbose & VERBOSE_DETAIL))
                 llapi_printf(LLAPI_MSG_NORMAL, "%d\n", mdtidx);
         else
                 llapi_printf(LLAPI_MSG_NORMAL, "%s MDT index: %d\n",
